--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </li>
         </ul>
 
-        <img src="C:\Users\sharafutdinovra\Downloads\raf.jfif" alt="Portret">
+        <img src="https://github.com/scharafad/scharafad.github.io/blob/main/raf.jfif" alt="Portret">
 
         <p>
             Cool guy, sexy boy
