--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             В свободное время я...
         </p>
 
-        <img src="https://github.com/scharafad/scharafad.github.io/blob/main/IMG_1520.JPG" alt="Pict1">
+        <img src="IMG_1520.JPG" alt="Pict1">
 
         <hr>
 
