Commit witout images

--- a/index.html
+++ b/index.html
@@ -13,79 +13,87 @@
 </head>
 <body>
     <div>
-        <p>Рафаил</p>
+        <h1>Рафаил</h1>
         <hr>
-        ХА<br>
-        <p>Педагог, репетитор, экстримал.</p>
-        <p>Love sport, music and teaching</p>
+        
+        <p>Учитель физики, математики и информатики</p>
+        <h2>Информация:</h2>
         <ul>
             <li>
-                Физика
+                Курс "Математика ЕГЭ"
             </li>
             <li>
-                Информатика
+                Курс "Информатика ЕГЭ"
             </li>
             <li>
-                Математика
+                Курс "Физика ЕГЭ"
             </li>
             <li>
-                Курсы
+                Репетиторство
+            </li>
+            <li>
+                О педагоге
             </li>
             <li>
                 Контакты
             </li>
         </ul>
 
-        <img src="https://github.com/scharafad/scharafad.github.io/blob/main/RAF.jpg?raw=true" alt="Portret">
+        <img src="C:\Users\sharafutdinovra\Downloads\main (1).JPG" alt="Portret">
 
-        <p>
-            Cool guy, sexy boy
-        </p>
+        <h3>
+            Объясню любую тему весело и понятно тысячью разными способами
+        </h3>
 
         <hr>
 
-        <h1>Teacher</h2>
-        <h3>Teacher</h3>
-        <h4>Teacher</h4>
-        <h2>Experiance</h2>
+        <h2>Опыт работы</h2>
 
         <ol>
             <li>
-                2019-2020 - Teacher in school 2072
+                Педагог в общеобразовательной школе по физике и информатике
             </li>
             <li>
-                2019-2021 - Teacher in school 123
+                Репетитор, обучивший более 50 детей разных возрастов
+            </li>
+            <li>
+                Бывший педагог школы программирования Coddy 
+            </li>
+            <li>
+                Программный директор 5 курсов по программированию 
+            </li>
+            <li>
+                Создатель видеокурсов по физике ЕГЭ в онлайн школе Pelican 
             </li>
         </ol>
 
         <hr>
 
-        <h2>Achivement</h2>
-        <p>
-            Достижения репетитора
-        </p>
+        <h2>Достижения</h2>
 
-        <ol>
+        <ul>
             <li>
-                100бальник ЕГЭ
+                Повышение среднего балла ЕГЭ на 30/40 за год
             </li>
             <li>
-                е100бальник ОГЭ
+                Настроенная система работы онлайн
             </li>
-        </ol>
-
-        <p>
-            Объясню одно и то же тысячью разными способами
-        </p>
+            <li>
+                Сданные квалификации на "высокий" и "экспертный" уровень
+            </li>
+        </ul>
 
         <hr>
 
         <h2>Хобби</h2>
         <p>
-            В свободное время я...
+            Две неотъемлемые части жизни: музыка и спорт
         </p>
 
-        <img src="https://github.com/scharafad/scharafad.github.io/blob/main/IMG_1520.JPG?raw=true" alt="Pict1">
+        <img src="C:\Users\sharafutdinovra\Downloads\1.JPG" alt="Pict1">
+        <img src="C:\Users\sharafutdinovra\Downloads\2.JPG" alt="Pict2">
+        <img src="C:\Users\sharafutdinovra\Downloads\3.JPG" alt="Pict3">
+        <img src="C:\Users\sharafutdinovra\Downloads\4.JPG" alt="Pict4">
 
         <hr>
 
