--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </li>
         </ul>
 
-        <img src="C:\Users\sharafutdinovra\Downloads\main (1).JPG" alt="Portret">
+        <img src="img/main (1).jpg" alt="Portret">
 
         <h3>
             Объясню любую тему весело и понятно тысячью разными способами
@@ -90,10 +90,10 @@
             Две неотъемлемые части жизни: музыка и спорт
         </p>
 
-        <img src="C:\Users\sharafutdinovra\Downloads\1.JPG" alt="Pict1">
-        <img src="C:\Users\sharafutdinovra\Downloads\2.JPG" alt="Pict2">
-        <img src="C:\Users\sharafutdinovra\Downloads\3.JPG" alt="Pict3">
-        <img src="C:\Users\sharafutdinovra\Downloads\4.JPG" alt="Pict4">
+        <img src="img/moto_.png" alt="Pict1">
+        <img src="img/para_.png" alt="Pict2">
+        <img src="img/piano_.png" alt="Pict3">
+        <img src="img/ski_.png" alt="Pict4">
 
         <hr>
 
