--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -9,24 +9,36 @@
         p, li{
             font-family:Verdana, Geneva, Tahoma, sans-serif
         }
+
+        .bold-text {
+            font-weight: bold;
+        }
+
+        .caption {
+            color:darkblue;
+        }
+
+        .count {
+            color:darkslateblue;
+        }
     </style>
 </head>
 <body>
     <div>
-        <h1>Рафаил</h1>
+        <h1><span class="bold-text caption">Рафаил</span></h1>
         <hr>
         
         <p>Учитель физики, математики и информатики</p>
-        <h2>Информация:</h2>
-        <ul>
+        <h2><span class="caption">Информация:</span></h2>
+        <ul class="count">
             <li>
-                Курс "Математика ЕГЭ"
+                Курс <b>"Математика ЕГЭ"</b>
             </li>
             <li>
-                Курс "Информатика ЕГЭ"
+                Курс <b>"Информатика ЕГЭ"</b>
             </li>
             <li>
-                Курс "Физика ЕГЭ"
+                Курс <b>"Физика ЕГЭ"</b>
             </li>
             <li>
                 Репетиторство
@@ -42,14 +54,14 @@
         <img src="img/main (1).jpg" alt="Portret">
 
         <h3>
-            Объясню любую тему весело и понятно тысячью разными способами
+            <i>Объясню любую тему весело и понятно тысячью разными способами</i>
         </h3>
 
         <hr>
 
-        <h2>Опыт работы</h2>
+        <h2><span class="caption">Опыт работы</span></h2>
 
-        <ol>
+        <ol class="count">
             <li>
                 Педагог в общеобразовательной школе по физике и информатике
             </li>
@@ -71,7 +83,7 @@
 
         <h2>Достижения</h2>
 
-        <ul>
+        <ul class="count">
             <li>
                 Повышение среднего балла ЕГЭ на 30/40 за год
             </li>
