--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -15,17 +15,17 @@
         }
 
         .caption {
-            color:darkblue;
+            color:red;
         }
 
         .count {
-            color:darkslateblue;
+            color:maroon;
         }
     </style>
 </head>
 <body>
     <div>
-        <h1><span class="bold-text caption">Рафаил</span></h1>
+        <h1><span class="bold-text">Рафаил</span></h1>
         <hr>
         
         <p>Учитель физики, математики и информатики</p>
@@ -81,7 +81,7 @@
 
         <hr>
 
-        <h2>Достижения</h2>
+        <h2><span class="caption">Достижения</span></h2>
 
         <ul class="count">
             <li>
@@ -97,7 +97,7 @@
 
         <hr>
 
-        <h2>Хобби</h2>
+        <h2><span class="caption">Хобби</span></h2>
         <p>
             Две неотъемлемые части жизни: музыка и спорт
         </p>
