--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -15,11 +15,11 @@
         }
 
         .caption {
-            color:red;
+            color:midnightblue;
         }
 
         .count {
-            color:maroon;
+            color:royalblue;
         }
     </style>
 </head>
