--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        html, body {
+            padding: 0;
+            margin: 0;
+        }
+
         p, li{
             font-family:Verdana, Geneva, Tahoma, sans-serif
         }
@@ -21,41 +26,47 @@
         .count {
             color:royalblue;
         }
+
+        .blue {
+            background: skyblue;
+        }
     </style>
 </head>
 <body>
     <div>
-        <h1><span class="bold-text">Рафаил</span></h1>
-        <hr>
-        
-        <p>Учитель физики, математики и информатики</p>
-        <h2><span class="caption">Информация:</span></h2>
-        <ul class="count">
-            <li>
-                Курс <b>"Математика ЕГЭ"</b>
-            </li>
-            <li>
-                Курс <b>"Информатика ЕГЭ"</b>
-            </li>
-            <li>
-                Курс <b>"Физика ЕГЭ"</b>
-            </li>
-            <li>
-                Репетиторство
-            </li>
-            <li>
-                О педагоге
-            </li>
-            <li>
-                Контакты
-            </li>
-        </ul>
+        <div class="blue">
+            <h1><span class="bold-text">Рафаил</span></h1>
+            <hr>
+            
+            <p>Учитель физики, математики и информатики</p>
+            <h2><span class="caption">Информация:</span></h2>
+            <ul class="count">
+                <li>
+                    Курс <b>"Математика ЕГЭ"</b>
+                </li>
+                <li>
+                    Курс <b>"Информатика ЕГЭ"</b>
+                </li>
+                <li>
+                    Курс <b>"Физика ЕГЭ"</b>
+                </li>
+                <li>
+                    Репетиторство
+                </li>
+                <li>
+                    О педагоге
+                </li>
+                <li>
+                    Контакты
+                </li>
+            </ul>
 
-        <img src="img/main (1).jpg" alt="Portret">
+            <img src="img/main (1).jpg" alt="Portret">
 
-        <h3>
-            <i>Объясню любую тему весело и понятно тысячью разными способами</i>
-        </h3>
+            <h3>
+                <i>Объясню любую тему весело и понятно тысячью разными способами</i>
+            </h3>
+        </div>
 
         <hr>
 
