--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        html, body {
+        html, body, p {
             padding: 0;
             margin: 0;
         }
