--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -20,15 +20,15 @@
         }
 
         .caption {
-            color:midnightblue;
+            color:#FFEC73;
         }
 
         .count {
-            color:royalblue;
+            color:#FFDD00;
         }
 
         .blue {
-            background: skyblue;
+            background:#A66800;
         }
     </style>
 </head>
