--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -20,21 +20,24 @@
         }
 
         .caption {
-            color:#FFEC73;
+            color:#3A83CE;
         }
 
         .count {
-            color:#FFDD00;
+            color:#1E5EA0;
         }
 
-        .blue {
-            background:#A66800;
+        .bg1 {
+            background:#C5F6F1;
+        }
+        .bg2 {
+            background:#8FC2F7;
         }
     </style>
 </head>
 <body>
     <div>
-        <div class="blue">
+        <div class="bg1">
             <h1><span class="bold-text">Рафаил</span></h1>
             <hr>
             
@@ -70,59 +73,66 @@
 
         <hr>
 
-        <h2><span class="caption">Опыт работы</span></h2>
+        <div class="bg2">
 
-        <ol class="count">
-            <li>
-                Педагог в общеобразовательной школе по физике и информатике
-            </li>
-            <li>
-                Репетитор, обучивший более 50 детей разных возрастов
-            </li>
-            <li>
-                Бывший педагог школы программирования Coddy 
-            </li>
-            <li>
-                Программный директор 5 курсов по программированию 
-            </li>
-            <li>
-                Создатель видеокурсов по физике ЕГЭ в онлайн школе Pelican 
-            </li>
-        </ol>
+            <h2><span class="caption">Опыт работы</span></h2>
 
-        <hr>
+            <ol class="count">
+                <li>
+                    Педагог в общеобразовательной школе по физике и информатике
+                </li>
+                <li>
+                    Репетитор, обучивший более 50 детей разных возрастов
+                </li>
+                <li>
+                    Бывший педагог школы программирования Coddy 
+                </li>
+                <li>
+                    Программный директор 5 курсов по программированию 
+                </li>
+                <li>
+                    Создатель видеокурсов по физике ЕГЭ в онлайн школе Pelican 
+                </li>
+            </ol>
 
-        <h2><span class="caption">Достижения</span></h2>
+            <hr>
 
-        <ul class="count">
-            <li>
-                Повышение среднего балла ЕГЭ на 30/40 за год
-            </li>
-            <li>
-                Настроенная система работы онлайн
-            </li>
-            <li>
-                Сданные квалификации на "высокий" и "экспертный" уровень
-            </li>
-        </ul>
+            <h2><span class="caption">Достижения</span></h2>
 
-        <hr>
-
-        <h2><span class="caption">Хобби</span></h2>
-        <p>
-            Две неотъемлемые части жизни: музыка и спорт
-        </p>
-
-        <img src="img/moto_.png" alt="Pict1">
-        <img src="img/para_.png" alt="Pict2">
-        <img src="img/piano_.png" alt="Pict3">
-        <img src="img/ski_.png" alt="Pict4">
+            <ul class="count">
+                <li>
+                    Повышение среднего балла ЕГЭ на 30/40 за год
+                </li>
+                <li>
+                    Настроенная система работы онлайн
+                </li>
+                <li>
+                    Сданные квалификации на "высокий" и "экспертный" уровень
+                </li>
+            </ul>
+        </div>
 
         <hr>
 
-        <form action="">
-             <input type="text" name="" id="">
-        </form>
+        <div calss='bg1'>
+
+            <h2><span class="caption">Хобби</span></h2>
+            <p>
+                Две неотъемлемые части жизни: музыка и спорт
+            </p>
+
+            <img src="img/moto_.png" alt="Pict1">
+            <img src="img/para_.png" alt="Pict2">
+            <img src="img/piano_.png" alt="Pict3">
+            <img src="img/ski_.png" alt="Pict4">
+
+            <hr>
+
+            <form action="">
+                <input type="text" name="" id="">
+            </form>
+        
+        </div>
 
         <hr>
     </div>
