--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -31,7 +31,10 @@
             background:#C5F6F1;
         }
         .bg2 {
-            background:#8FC2F7;
+            background:#C5F6F1;
+        }
+        .bg3 {
+            background:#88F9A5;
         }
     </style>
 </head>
@@ -114,12 +117,13 @@
 
         <hr>
 
-        <div calss='bg1'>
+        <div calss='bg3'>
 
             <h2><span class="caption">Хобби</span></h2>
             <p>
                 Две неотъемлемые части жизни: музыка и спорт
             </p>
+            <br>
 
             <img src="img/moto_.png" alt="Pict1">
             <img src="img/para_.png" alt="Pict2">
