--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -117,7 +117,7 @@
 
         <hr>
 
-        <div calss='bg3'>
+        <div calss="bg3">
 
             <h2><span class="caption">Хобби</span></h2>
             <p>
