--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -28,10 +28,10 @@
         }
 
         .bg1 {
-            background:#C5F6F1;
+            background:#e2fffc;
         }
         .bg2 {
-            background:#C5F6F1;
+            background:#c4dbd9;
         }
         .bg3 {
             background:#88F9A5;
