--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -129,16 +129,19 @@
             <img src="img/para_.png" alt="Pict2">
             <img src="img/piano_.png" alt="Pict3">
             <img src="img/ski_.png" alt="Pict4">
+        </div>
 
-            <hr>
+        <hr>
 
+        <div calss="bg1">
             <form action="">
                 <input type="text" name="" id="">
             </form>
         
-        </div>
+        
 
-        <hr>
+            <hr>
+        </div>
     </div>
 </body>
 </html>
