--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -36,42 +36,48 @@
         .bg3 {
             background:#88F9A5;
         }
+        .block1 {
+            width: 900px;
+            margin: auto;
+        }
     </style>
 </head>
 <body>
     <div>
         <div class="bg1">
-            <h1><span class="bold-text">Рафаил</span></h1>
-            <hr>
-            
-            <p>Учитель физики, математики и информатики</p>
-            <h2><span class="caption">Информация:</span></h2>
-            <ul class="count">
-                <li>
-                    Курс <b>"Математика ЕГЭ"</b>
-                </li>
-                <li>
-                    Курс <b>"Информатика ЕГЭ"</b>
-                </li>
-                <li>
-                    Курс <b>"Физика ЕГЭ"</b>
-                </li>
-                <li>
-                    Репетиторство
-                </li>
-                <li>
-                    О педагоге
-                </li>
-                <li>
-                    Контакты
-                </li>
-            </ul>
+            <div class="block1">
+                <h1><span class="bold-text">Рафаил</span></h1>
+                <hr>
+                
+                <p>Учитель физики, математики и информатики</p>
+                <h2><span class="caption">Информация:</span></h2>
+                <ul class="count">
+                    <li>
+                        Курс <b>"Математика ЕГЭ"</b>
+                    </li>
+                    <li>
+                        Курс <b>"Информатика ЕГЭ"</b>
+                    </li>
+                    <li>
+                        Курс <b>"Физика ЕГЭ"</b>
+                    </li>
+                    <li>
+                        Репетиторство
+                    </li>
+                    <li>
+                        О педагоге
+                    </li>
+                    <li>
+                        Контакты
+                    </li>
+                </ul>
 
-            <img src="img/main (1).jpg" alt="Portret">
+                <img src="img/main (1).jpg" alt="Portret">
 
-            <h3>
-                <i>Объясню любую тему весело и понятно тысячью разными способами</i>
-            </h3>
+                <h3>
+                    <i>Объясню любую тему весело и понятно тысячью разными способами</i>
+                </h3>
+            </div>
         </div>
 
         <hr>
