--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -123,7 +123,7 @@
 
         <hr>
 
-        <div calss="bg3">
+        <div class="bg3">
 
             <h2><span class="caption">Хобби</span></h2>
             <p>
@@ -139,7 +139,7 @@
 
         <hr>
 
-        <div calss="bg1">
+        <div class="bg1">
             <form action="">
                 <input type="text" name="" id="">
             </form>
