--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -34,7 +34,7 @@
             background:#c4dbd9;
         }
         .bg3 {
-            background:#88F9A5;
+            background:#C8F9D5;
         }
         .block1 {
             width: 900px;
