--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -83,58 +83,62 @@
         <hr>
 
         <div class="bg3">
+            <div class="block1">
 
-            <h2><span class="caption">Опыт работы</span></h2>
+                <h2><span class="caption">Опыт работы</span></h2>
 
-            <ol class="count">
-                <li>
-                    Педагог в общеобразовательной школе по физике и информатике
-                </li>
-                <li>
-                    Репетитор, обучивший более 50 детей разных возрастов
-                </li>
-                <li>
-                    Бывший педагог школы программирования Coddy 
-                </li>
-                <li>
-                    Программный директор 5 курсов по программированию 
-                </li>
-                <li>
-                    Создатель видеокурсов по физике ЕГЭ в онлайн школе Pelican 
-                </li>
-            </ol>
+                <ol class="count">
+                    <li>
+                        Педагог в общеобразовательной школе по физике и информатике
+                    </li>
+                    <li>
+                        Репетитор, обучивший более 50 детей разных возрастов
+                    </li>
+                    <li>
+                        Бывший педагог школы программирования Coddy 
+                    </li>
+                    <li>
+                        Программный директор 5 курсов по программированию 
+                    </li>
+                    <li>
+                        Создатель видеокурсов по физике ЕГЭ в онлайн школе Pelican 
+                    </li>
+                </ol>
 
-            <hr>
+                <hr>
 
-            <h2><span class="caption">Достижения</span></h2>
+                <h2><span class="caption">Достижения</span></h2>
 
-            <ul class="count">
-                <li>
-                    Повышение среднего балла ЕГЭ на 30/40 за год
-                </li>
-                <li>
-                    Настроенная система работы онлайн
-                </li>
-                <li>
-                    Сданные квалификации на "высокий" и "экспертный" уровень
-                </li>
-            </ul>
+                <ul class="count">
+                    <li>
+                        Повышение среднего балла ЕГЭ на 30/40 за год
+                    </li>
+                    <li>
+                        Настроенная система работы онлайн
+                    </li>
+                    <li>
+                        Сданные квалификации на "высокий" и "экспертный" уровень
+                    </li>
+                </ul>
+            </div>
         </div>
 
         <hr>
 
         <div class="bg1">
+            <div class="block1">
 
-            <h2><span class="caption">Хобби</span></h2>
-            <p>
-                Две неотъемлемые части жизни: музыка и спорт
-            </p>
-            <br>
+                <h2><span class="caption">Хобби</span></h2>
+                <p>
+                    Две неотъемлемые части жизни: музыка и спорт
+                </p>
+                <br>
 
-            <img src="img/moto_.png" alt="Pict1">
-            <img src="img/para_.png" alt="Pict2">
-            <img src="img/piano_.png" alt="Pict3">
-            <img src="img/ski_.png" alt="Pict4">
+                <img src="img/moto_.png" alt="Pict1">
+                <img src="img/para_.png" alt="Pict2">
+                <img src="img/piano_.png" alt="Pict3">
+                <img src="img/ski_.png" alt="Pict4">
+            </div>
         </div>
 
         <hr>
