--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -34,7 +34,7 @@
             background:#c4dbd9;
         }
         .bg3 {
-            background:#C8F9D5;
+            background:#d0f3da;
         }
         .block1 {
             width: 900px;
@@ -135,9 +135,8 @@
                 <br>
 
                 <img src="img/moto_.png" alt="Pict1">
-                <img src="img/para_.png" alt="Pict2">
+                <img src="img/ski_.png" alt="Pict2">
                 <img src="img/piano_.png" alt="Pict3">
-                <img src="img/ski_.png" alt="Pict4">
             </div>
         </div>
 
