--- a/Teacher/index.html
+++ b/Teacher/index.html
@@ -40,6 +40,12 @@
             width: 900px;
             margin: auto;
         }
+        .nav li {
+            display: inline-block;
+            margin: 5px;
+            padding: 5px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -51,7 +57,7 @@
                 
                 <p>Учитель физики, математики и информатики</p>
                 <h2><span class="caption">Информация:</span></h2>
-                <ul class="count">
+                <ul class="count nav">
                     <li>
                         Курс <b>"Математика ЕГЭ"</b>
                     </li>
